WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224385
REGRESSION (
r271660
): Tap highlight no longer shows when tapping clickable elements without touch event listeners
https://bugs.webkit.org/show_bug.cgi?id=224385
Summary
REGRESSION (r271660): Tap highlight no longer shows when tapping clickable el...
Wenson Hsieh
Reported
2021-04-09 11:44:07 PDT
SSIA
Attachments
Patch
(19.62 KB, patch)
2021-04-09 15:23 PDT
,
Wenson Hsieh
thorton
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-04-09 11:44:27 PDT
<
rdar://problem/76462370
>
Wenson Hsieh
Comment 2
2021-04-09 15:23:28 PDT
Created
attachment 425658
[details]
Patch
Wenson Hsieh
Comment 3
2021-04-09 19:10:43 PDT
Comment on
attachment 425658
[details]
Patch Thanks for the review!
EWS
Comment 4
2021-04-09 19:16:49 PDT
commit-queue failed to commit
attachment 425658
[details]
to WebKit repository. To retry, please set cq+ flag again.
EWS
Comment 5
2021-04-09 19:48:45 PDT
commit-queue failed to commit
attachment 425658
[details]
to WebKit repository. To retry, please set cq+ flag again.
Wenson Hsieh
Comment 6
2021-04-09 20:03:38 PDT
Committed: <
https://trac.webkit.org/changeset/275791/webkit
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug