Source/WebKit/UIProcess/API/ios/WKWebViewPrivateForTestingIOS.h
@@ -44,6 +44,7 @@
 @property (nonatomic, readonly) NSNumber *_stableStateOverride;
 @property (nonatomic, readonly) CGRect _dragCaretRect;
 @property (nonatomic, readonly, getter=_isAnimatingDragCancel) BOOL _animatingDragCancel;
+@property (nonatomic, readonly) CGRect _tapHighlightViewRect;
 
 - (void)keyboardAccessoryBarNext;
 - (void)keyboardAccessoryBarPrevious;
