Tools/TestRunnerShared/UIScriptContext/UIScriptController.h
@@ -182,6 +182,12 @@ public:
         return false;
     }
 
+    virtual JSObjectRef tapHighlightViewRect() const
+    {
+        notImplemented();
+        return nullptr;
+    }
+
     virtual void rawKeyDown(JSStringRef) { notImplemented(); }
     virtual void rawKeyUp(JSStringRef) { notImplemented(); }
 
